force-app/main/default/objects/custom_create240__c/custom_create240__c.object-meta.xml
<CustomObject>
    <label>Custom created object240</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects240</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>