force-app/main/default/objects/custom_create240__c/fields/custom_create_240field600__c.field-meta.xml
<CustomField>
    <fullName>custom_create_240field600__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 240field600</label>
    <type>Checkbox</type>
</CustomField>